[package]
name = "uniset"
version = "0.1.1"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/udoprog/uniset"
homepage = "https://github.com/udoprog/uniset"
documentation = "https://docs.rs/uniset"
description = """
A hierarchical, growable bit set with support for in-place atomic operations.
"""
keywords = ["bitset", "containers"]
categories = ["algorithms"]

[features]
default = ["vec-safety"]
vec-safety = []

[dependencies]

[dev-dependencies]
hibitset = "0.6.3"
criterion = "0.3"

[[bench]]
name = "bitset"
harness = false