[package]
name = "uniset"
version = "0.2.1"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
description = "A hierarchical, growable bit set with support for in-place atomic operations."
documentation = "https://docs.rs/uniset"
readme = "README.md"
homepage = "https://github.com/udoprog/uniset"
repository = "https://github.com/udoprog/uniset"
license = "MIT/Apache-2.0"
keywords = ["bitset", "containers"]
categories = ["algorithms"]

[features]
default = ["vec-safety"]
vec-safety = []

[dev-dependencies]
hibitset = "0.6.3"
criterion = "0.3"

[[bench]]
name = "bitset"
harness = false
