[package]
name = "uniset"
version = "0.2.4"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
rust-version = "1.56"
description = "A hierarchical, growable bit set with support for in-place atomic operations."
documentation = "https://docs.rs/uniset"
readme = "README.md"
homepage = "https://github.com/udoprog/uniset"
repository = "https://github.com/udoprog/uniset"
license = "MIT OR Apache-2.0"
keywords = ["bitset", "containers"]
categories = ["algorithms"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(uniset_op_count)'] }

[features]
default = ["vec-safety"]
vec-safety = []

[dev-dependencies]
hibitset = "0.6.3"
criterion = "0.4.0"

[[bench]]
name = "bitset"
harness = false
